--- a/css/styles.css
+++ b/css/styles.css
@@ -12,12 +12,8 @@ body{
   flex-direction: column;
 }
 
-hr {
-  background-color: white;
-  height: 5px;
-  border-radius: 30px;
-  margin: 30px 0px;
-}
+
+/*Navbar*/
 
 .navbar {
   min-height: 200px;
@@ -35,6 +31,16 @@ hr {
 
 .active {
   border-bottom: 5px dotted white;
+}
+
+
+/*Main Page*/
+
+hr {
+  background-color: white;
+  height: 5px;
+  border-radius: 30px;
+  margin: 30px 0px;
 }
 
 .page {
@@ -67,6 +73,39 @@ h2 {
   width: 100%;
 }
 
+
+/*About Me Page*/
+.square-sm {
+  width: 100%;
+  border-radius: 1000px;
+}
+
+.about-img {
+  display: inline;
+  min-width: 350px;
+  max-width: 350px;
+  margin: auto;
+}
+
+.about-info {
+  min-width: 350px;
+}
+
+.about-info p {
+  text-align: center;
+}
+
+
+
+/*Contact Me Page*/
+iframe {
+  width: 100%;
+  height: 1200px;
+}
+
+
+/*Footer*/
+
 .icon {
   width: 80px;
   padding: 0px 20px;
@@ -83,9 +122,17 @@ footer {
 }
 
 
+/*Responsive*/
+
 @media (min-width: 800px) {
   .page {
     width: 800px;
     margin: auto;
+  }
+  iframe {
+    width: 100%;
+  }
+  .square-sm {
+    width: 200px;
   }
 }
