--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@ hr {
 }
 
 .page {
+  padding: 10px;
   text-align: center;
 }
 
@@ -73,6 +74,16 @@ h2 {
   width: 100%;
 }
 
+/*Portfolio Page*/
+.project-img {
+  width: 100%;
+  margin: 20px 0px;
+  
+}
+
+.project-info {
+  text-align: center !important;
+}
 
 /*About Me Page*/
 .square-sm {
@@ -88,7 +99,11 @@ h2 {
 }
 
 .about-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   min-width: 350px;
+  padding-top: 20px;
 }
 
 .about-info p {
@@ -123,6 +138,12 @@ footer {
 
 
 /*Responsive*/
+
+@media (min-width: 500px) {
+  .project-img {
+    width: 500px;
+  }
+}
 
 @media (min-width: 800px) {
   .page {
